--- a/AluraBooks/index.html
+++ b/AluraBooks/index.html
@@ -9,6 +9,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;700&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@10/swiper-bundle.min.css"/>
     <link rel="stylesheet" href="style.css">
 </head> 
 
@@ -50,6 +51,110 @@
      <p class="banner__texto">Encontre em nossa estante o que precisa para o seu desenvolvimento!</p>
      <input type="search" class="banner__pesquisa" placeholder="Qual será sua próxima leitura?">
    </section>
+
+   <section class="carrossel">
+    <h2 class="carrossel__titulo">Novos lançamentos</h2>
+    <!-- Slider main container -->
+<div class="swiper">
+  <!-- Additional required wrapper -->
+    <!-- If we need pagination -->
+    <div class="swiper-pagination"></div>
+
+  <div class="swiper-wrapper">
+    <!-- Slides -->
+    <div class="swiper-slide"><img src="img/ApacheKafka.png" alt="Livro sobre apache kafka e spring boot da alura books"></div>
+    <div class="swiper-slide"><img src="img/Liderança.png" alt="livro sobre a liderança em desing da alura books"></div>
+    <div class="swiper-slide"><img src="img/Javascript.png" alt=""></div>
+    <div class="swiper-slide"><img src="img/Guia Front-end.png" alt=""></div>
+    <div class="swiper-slide"><img src="img/Portugol.png"  alt="livro sobre Portugol"></div>
+  </div>
+
+  <!-- If we need navigation buttons -->
+  <div class="swiper-button-prev"></div>
+  <div class="swiper-button-next"></div>
+  </div>
+
+  <div class="card">
+      <div class="card__descricao">
+        <div class="descricao">
+          <h3 class="descricao__titulo">Talvez você também se interesse por...</h3>
+          <h2 class="descricao__titulo-livro">Angular 11 e firebase</h2>
+          <p class="descricao__texto">Construindo uma aplicação integrada com a plataforma do Google.</p>
+      </div>
+      <img src="img/Angular.png" alt="">
+     </div>
+
+     <!-- 2º linha -->
+     <div class="card__botoes">
+       <!--1º coluna -->
+       <ul class="botoes">
+         <li class="botoes__item"><img src="img/Favoritos.svg" alt=""></li>
+         <li class="botoes__item"><img src="img/Compras.svg" alt=""></li>
+       </ul>
+       <!--2º coluna -->
+       <a href="#" class="botoes__ancora">Saiba mais</a>
+     </div>
+  </div>
+
+
+  <section class="carrossel">
+    <h2 class="carrossel_titulo1">Mais vendidos</h2>
+    <!-- Slider main container -->
+    <div class="carrossel_container">
+        <div class="swiper">
+            <!-- If we need pagination -->
+            <div class="swiper-pagination1"></div>
+            <!-- Additional required wrapper -->
+            <div class="swiper-wrapper">
+                <!-- Slides -->
+                <div class="swiper-slide1"><img src="img/Guia Front-end.png" alt=""></div>
+                <div class="swiper-slide1"><img src="img/Javascript.png" alt=""></div>
+                <div class="swiper-slide1"><img src="img/Portugol.png" alt=""></div>
+                <div class="swiper-slide1"><img src="img/Liderança.png" alt=""></div>
+                <div class="swiper-slide1"><img src="img/ApacheKafka.png" alt=""></div>
+            </div>
+        
+            <!-- If we need navigation buttons -->
+            <div class="
+            <div class="swiper-button-next1"></div>swiper-button-prev"></div>
+            <div class="swiper-button-next1"></div>
+        </div>
+        <div class="card">
+            <div class="card_container">
+                <div class="card_container_conteudo">
+                    <img src="img/Estrelinhas.png" alt="" class="card_container_imagem">
+                    <h2 class="card_container_titulo">Autora do Mês</h2>
+                    <h3 class="card_container_subtitulo">Juliana Agarikov</h3>
+                    <p class="card_container_texto">Analista de sistemas e escritora, Juliana é especialista em Front-End.</p>
+                </div>
+                <span>
+                    <img src="img/Favoritos.svg" alt="Favoritos" class="card_container_imagem">
+                    <img src="img/Sacola.png" alt="Sacola" class="card_container_imagem">
+                </span>
+            </div>
+            <div class="card_container_icon">
+                <img src="img/Perfil-escritora 1-1.png" alt="">
+                <a href="#" class="card_container_link">Saiba mais</a>
+            </div>
+        </div>
+    </div>
+</section>
+  <!-- If we need scrollbar -->
+  <div class="swiper-scrollbar"></div>
+</div>
+   </section>
+
+   <script src="https://cdn.jsdelivr.net/npm/swiper@10/swiper-bundle.min.js"></script>
+   <script>
+    const swiper = new Swiper('.swiper', {
+     spaceBetween: 10, 
+     slidesPerView: 3,
+     pagination: {
+       el: 'swiper-pagination',
+       type: 'bullets',
+     }
+    });
+   </script>
 </body>
 
 </html>
